# gridsync

./: .appveyor.yml  .gitattributes  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  Containerfile  Containerfile.qt5  Containerfile.qt6  Dockerfile  Info.plist  MANIFEST.in  Makefile  README.rst  Vagrantfile  _d.py  add_zkaps.py  appveyor.yml  config.txt  disable_setuptools.patch  flake.nix  gridsync.desktop  gridsync.spec  make.bat  pyNotificationCenter.py  pyinstaller.spec  pyproject.toml  release-signing-key.asc  requirements.txt  resources.qrc  setup.cfg  setup.py  tahoe.py  tahoe.spec  test.py  test12  test123  test3  test9  (+3 more)
.github/workflows/: ci.yaml
containers/: Containerfile.qt5
designer/: new_folder.ui  newfolder.ui  preferences.ui
docs/: cheat-codes.md  example-invite.json  faq.rst  invite-codes.md  invite.rst  recovery-keys.md  tor-integration.md  uri_scheme.rst  ux.rst  verifying-signatures.md
docs/IFF 2016/: GridSync design workshop plans.odt
docs/proposed/: newscaps.md
gridsync/: __init__.py  _version.py  backup.py  bridge.py  capabilities.py  cli.py  config.py  core.py  crypto.py  daemon.py  deprecated.py  desktop.py  devices.py  error.py  errors.py  filter.py  grid_editor.py  gridsync  gui.py  integration.py  invite.py  lock.py  log.py  logging.py  magic_folder.py  magic_folder_events.py  main_window.py  mnemonic.py  monitor.py  msg.py  network.py  newfolder.py  news.py  notify.py  phrase.py  preferences.py  providers.py  qtreactor.py  recovery.py  resource.py  (+28 more)
gridsync/forms/: preferences.py
gridsync/gui/: __init__.py  activity.py  charts.py  color.py  debug.py  device.py  devices.py  files_model.py  files_view.py  font.py  grid.py  grid_editor.py  grid_explorer.py  history.py  invite.py  magic_folder.py  main_window.py  menu.py  model.py  new_folder.py  newfolder.py  password.py  phrase.py  pixmap.py  preferences.py  qrcode.py  setup.py  share.py  status.py  systray.py  toolbar.py  usage.py  view.py  voucher.py  welcome.py  widgets.py  wizard.py  zkap.py
gridsync/resources/: config.txt  leastauthority.com.icon  storage_providers.txt
images/: arrow-right.xcf  close.xcf  cloud.xcf  cloud_storage.xcf  gridsync.icns  laptop.xcf  paste.xcf  tahoe-lafs-modified.xcf  wifi.xcf
misc/: Gridsync.iss  Info.plist  InnoSetup.iss  InnoSetup5.iss  InnoSetup6.iss  bootstrap-pyenv.sh  call_dmgbuild.py  dmgbuild_settings.py  gridsync-builder-qt5.digest  gridsync-builder-qt6.digest  gridsync.spec  irc-notify.py  resources.qrc  rsa-public-exponent.patch  storage_client.py.patch  tahoe.py  tahoe.spec  zkapauthorizer-retry-interval.patch
nix/: default.nix  gridsync.nix  magic-folder-env.nix  magic-folder-repo.nix  magic-folder.nix  overlays.nix  pyqtchart.nix  pytestqt.nix  pytesttwisted.nix  qt5reactor.nix  shell.nix  tahoe-lafs-env.nix  test_network.patch  zkapauthorizer.nix  zxcvbn.nix
pyinstaller-hooks/: hook-twisted.plugins.py  runtime-twisted.plugins.py
requirements/: black.txt  dmgbuild.txt  flake8.txt  gridsync-base.txt  gridsync-platform.txt  gridsync.in  gridsync.txt  lint.in  lint.txt  magic-folder-base.txt  magic-folder-platform.txt  magic-folder.in  magic-folder.json  magic-folder.txt  mypy.txt  pyinstaller-base.txt  pyinstaller-platform.txt  pyinstaller.in  pyinstaller.json  pyinstaller.txt  pylint.txt  pyqt5.in  pyqt5.txt  pyqt6.in  pyqt6.txt  pyside2.in  pyside2.txt  pyside6.in  pyside6.txt  pytest.txt  requirements-flake8.txt  requirements-gridsync.txt  requirements-hashes.txt  requirements-mypy.txt  requirements-pyinstaller.txt  requirements-pylint.txt  requirements-pytest.txt  requirements-tahoe.txt  requirements.txt  tahoe-lafs-base.txt  (+7 more)
scripts/: check_outdated.py  checkout-github-repo  codesign.py  codesign_app.py  extract_dmg.py  generate_vouchers.py  get_yum_packages.py  gpg.py  install_mac_deps.py  irc-notify.py  link_pyqt.py  lint-fix.sh  make-all.bat  make-frozen-tahoe.bat  make-frozen-tahoe.sh  make-tahoe-deps.bat  make_appimage.py  make_archive.py  make_installer.py  make_small_files.py  make_source_tarball.py  make_source_zip.py  make_zip.py  maybe_downgrade_pyqt.py  maybe_rebuild_libsodium.py  mypy-wrapper.py  notarize.py  print_hashes.py  provision_buildbot-worker.ps1  provision_buildbot-worker.sh  provision_devtools.bat  provision_devtools.sh  provision_sac.ps1  reproducible-pip.py  sha256sum.py  signtool.py  strip_py2app_bundle.py  test_determinism.py  test_reproducibility.py  update-github-repo  (+4 more)
tests/: conftest.py  test___init__.py  test__version.py  test_bridge.py  test_capabilities.py  test_config.py  test_crypto.py  test_deprecated.py  test_desktop.py  test_filter.py  test_invite.py  test_lock.py  test_log.py  test_magic_folder.py  test_magic_folder_events.py  test_mnemonic.py  test_monitor.py  test_network.py  test_news.py  test_phrase.py  test_providers.py  test_pyqt.py  test_recovery.py  test_resource.py  test_resources.py  test_setup.py  test_streamedlogs.py  test_supervisor.py  test_sync.py  test_system.py  test_tahoe.py  test_tor.py  test_uri.py  test_util.py  test_utils.py  test_voucher.py  test_websocket.py  test_wormhole.py  test_zkapauthorizer.py
ui/: grid_editor.ui  grid_explorer.ui
(+60 files in other folders)
